Bug 68804: Properly parse WAV files, r+sr=roc